# src/users/users.controller.ts
@@ -1,0 +1,43 @@
+import { UpdatePasswordDto } from './dto/update-password.dto';
+import { Controller, Get, Post, Body, Patch, Param, Delete, Put, HttpCode, Header, UseInterceptors, ClassSerializerInterceptor, ValidationPipe, ParseUUIDPipe } from '@nestjs/common';
+import { UsersService } from './users.service';
+import { CreateUserDto } from './dto/create-user.dto';
+
+@Controller('user')
+export class UsersController {
+  constructor(private readonly usersService: UsersService) {}
+
+  @Post()
+  @HttpCode(201)
+  @Header('Content-Type', 'application/json')
+  @UseInterceptors(ClassSerializerInterceptor)
+  create(@Body() createUserDto: CreateUserDto) {
+    return this.usersService.create(createUserDto);
+  }
+
+  @Get()
+  @Header('Content-Type', 'application/json')
+  @UseInterceptors(ClassSerializerInterceptor)
+  findAll() {
+    return this.usersService.findAll();
+  }
+
+  @Get(':id')
+  @Header('Content-Type', 'application/json')
+  @UseInterceptors(ClassSerializerInterceptor)
+  findOne(@Param('id', new ParseUUIDPipe({version: '4'})) id: string) {
+    return this.usersService.findOne(id);
+  }
+
+  @Put(':id')
+  @UseInterceptors(ClassSerializerInterceptor)
+  update(@Param('id', new ParseUUIDPipe({version: '4'})) id: string, @Body() updatePasswordDto: UpdatePasswordDto) {
+    return this.usersService.update(id, updatePasswordDto);
+  }
+
+  @Delete(':id')
+  @HttpCode(204)
+  remove(@Param('id', new ParseUUIDPipe({version: '4'})) id: string) {
+    return this.usersService.remove(id);
+  }
+}
